 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Added .rmf file UV texture coordinate loading.

* [DanielPharos]: Fixed a bug causing access violations when trying to load textures from
          - Quake 1 or Hexen 2 when the corresponding .bsp file hadn't been loaded yet.

* [DanielPharos]: Added ambient lighting support to Direct3D renderer.

* [DanielPharos]: Added trilinear texture filtering to Glide renderer.

* [DanielPharos]: Set a more sensible minimum render distance. This should reduce Z-buffer
          - fighting in OpenGL and Direct3D.

* [DanielPharos]: Added workaround for OpenGL implementations that cause floating point
          - exceptions to be raised during rendering.

* [DanielPharos]: Rewrote the Intel precision assembly code to only change the precision,
          - not any other floating point flags, and removed it from the Software renderer.

* [DanielPharos]: Fixed a bug introduced with the recent OpenGL texture loading fix, producing
          - corrupt output in the viewport if the width is not a multiple of four.

* [DanielPharos]: Fixed a bug corrupting MOHAA patchDef2 and patchDef3 saving.

* [DanielPharos]: Fixed handling File Association paths with spaces.

* [DanielPharos]: Fixed OpenGL texture loading issues, most commonly with odd-sized textures.

* [DanielPharos]: Cache texture sizes during map loading and saving for a big speed improvement
          - with certain games.

* [DanielPharos]: Enabled support for Call of Duty 2. All basic operations are functional!

* [DanielPharos]: Added experimental support for loading CoD2 material files.
